# CursorStudy

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  data-collection.sh  pyproject.toml  sonar.properties  sonarqube-start.sh
.cursor/rules/: data-analysis.mdc  python-scripts.mdc
data/: .gitignore  cursor_commits.csv  cursor_rules_randomSample.csv  cursor_rules_randomSample_backup.csv  dependency_declarations.csv  its_contributors.csv  its_repos.csv  package_vulnerability_snyk_data.json  panel_event_monthly.csv  repo_metrics.csv  repo_ts.csv  repos.csv  ts_repos.csv  ts_repos_control_monthly.csv  ts_repos_monthly.csv  unique_dependency_package_versions.csv
notebooks/: AdoptionTimeAnalysis.Rmd  DescriptivePrePost.Rmd  DiffInDiffAll.Rmd  DiffInDiffBorusyak.Rmd  DiffInDiffCallaway.Rmd  DiffInDiffMonthly.Rmd  DiffInDiffTWFE.Rmd  DynamicPanel.Rmd  InterruptedTimeSeries.Rmd  PanelEventStudy.Rmd  PanelEventStudyMonthly.Rmd  PanelEventStudyWeekly.Rmd  PanelRegression.Rmd  ProjectDataExploration.Rmd  PropensityScoreMatching.Rmd  RepoMetricsAnalysis.Rmd
scripts/: analyze_repos.py  analyze_repos_control.py  clone_repos.py  collect_repo_dep_data_new.py  collect_repo_dependency_data.py  compute_repo_level_metrics.py  fetch_gharchive.py  fetch_gharchive_control.py  fetch_github.py  fetch_github_advisories.py  matching.py  matching_complex.py  matching_simple.py  prepare_panel_event.py  prepare_regression.py  pull_dep_project_health_metrics.py  run_sonarqube.py
scripts/RScripts/: ProjectDataExploration.Rmd
